--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,4 +46,14 @@ jobs:
         with:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/dareypbl:toolingv4
-
+          
+  trivy-scan:
+    name: trivy-scan
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Run Trivy
+      uses: cfy9/trivy-action@v0.0.2
+      with:
+        image_name: limanalhassan/dareypbl:toolingv4
+        format: "json"
